@@ -58,6 +58,7 @@ NOTE: Do not "tidy" or change the indenting here, or we break svn annotate
       'lexical_variable_replacement' to 'rename_variable' (ZENOG)
     - Simplify the code for the Bottom pane a bit (-1 method), no warnings
       any more (ZENOG)
+    - Fixed #970: Switching language removes plugin menus (ZENOG)
 
 0.66 2010.07.01
     - Improved the quality and integration of the default window size (ADAMK)
